# SnapHelp

./: .env  .gitignore  README.md  allcards.txt  bigprompt.txt  capture_screenshot.py  cardFInder.py  card_abilities.txt  card_finder.py  deck.txt  divide_screenshot.py  energyPower.txt  finalResponse.txt  get_advice.py  gpt_interaction.py  hand.txt  image_coordinate_finder.py  location1.txt  location2.txt  location3.txt  main.py  model.txt  pyproject.toml  read_card_abilities.py
